# ask-atlas

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TECHNICAL_OVERVIEW.md  agentic_sql_subagent_plan.md  app.py  atlas_db_structure.json  cleanup-policy.json  cloudbuild.yaml  db_table_descriptions.json  design.pen  design_with_resolutions.pen  docker-compose.test.yml  docker-compose.yml  frontend-integration-issues.md  model_config.py  postgres_db_schema.json  pyproject.toml  query_atlas_db.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
design/: design.pen
docs/: architecture_and_deployment_analysis.md  backend_redesign_analysis.md  hybrid_backend_analysis.md  langgraph_migration.md
docs/public/: architecture.md  backend_architecture.md  deferred_graphql_discrepancies.md
evaluation/: README.md  api_capability_reference.md  atlas_country_pages_exploration.md  atlas_explore_pages_exploration.md  backend_redesign_analysis.md  browser_spot_check_report.md  collect_country_page_data.py  collect_explore_page_data.py  compare_cohorts.py  compare_runs.py  country_page_collection_guide.md  create_evals.py  eval_questions.json  evaluation_strategy.md  execution_accuracy.py  explore_page_collection_guide.md  failure_taxonomy.py  feedback_to_eval.py  generate_ground_truth.py  generate_paper_questions.py  generate_web_ground_truth.py  graphql_api_official_docs.md  gt_regeneration_plan.md  html_report.py  hybrid_backend_analysis.md  judge.py  link_judge.py  new_explore_page_questions.json  paper_questions_staging.json  promote_feedback.py  report.py  review_server.py  run_agent_evals.py  run_eval.py  setup_questions.py  system_prompt.md  test_feedback_to_eval.py  utils.py
evaluation/product_search/: build_gold_standard.py  eval.py
frontend/: .firebaserc  .gitignore  .oxfmtrc.jsonc  components.json  firebase.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  config.ts  index.tsx
frontend/src/constants/: chat-data.ts  landing-data.ts
frontend/src/hooks/: use-backend-ready.test.ts  use-backend-ready.ts  use-chat-stream.integration.test.ts  use-chat-stream.test.ts  use-chat-stream.ts  use-conversations.test.ts  use-conversations.ts  use-feedback.test.ts  use-feedback.ts  use-sidebar-resize.ts  use-theme.ts  use-trade-toggles.test.ts  use-trade-toggles.ts
frontend/src/pages/: chat.integration.test.tsx  chat.test.tsx  chat.tsx  landing.test.tsx  landing.tsx
frontend/src/test/: sse-helpers.ts
frontend/src/types/: chat.ts
frontend/src/utils/: entity-colors.ts  pipeline-type.ts  session.test.ts  session.ts  (+2 more)
scripts/: README.md  build_docs_index.py  build_product_search_index.py  e2e_observability_test.py  enum_relaxation_experiment.py  enum_relaxation_results.json  load_test.py  load_test_db.py  reasoning_experiment_results.json  reasoning_field_experiment.py  smoke_test_sql_pipeline.py  test_e2e_pipelines.py  test_ilike_fix.py  test_ilike_fix_results.json  test_validation_stress.py  trace_pipeline.py  trace_sql_pipeline.py  verify_async_db.py
src/: agent_node.py  api.py  atlas_links.py  cache.py  cleanup_db_connections.py  config.py  conversations.py  db_pool_health.py  docs_pipeline.py  docs_retrieval.py  error_handling.py  feedback.py  generate_query.py  get_db_schema.py  graph.py  graphql_client.py  graphql_pipeline.py  graphql_subagent.py  logging_config.py  main.py  model_config.py  persistence.py  posthog_proxy.py  product_and_schema_lookup.py  product_enrichment.py  product_lookup.py  product_search.db  product_search.py  prompts.py  select_schema_and_tables.py  sql_multiple_schemas.py  sql_pipeline.py  sql_subagent.py  sql_validation.py  state.py  streaming.py  test_postgres.py  text_to_sql.py  token_usage.py
src/docs/: classification_systems.md  country_entities.md  country_page_reproduction.md  data_coverage.md  explore_page_reproduction.md  graphql_api_guide.md  growth_dynamics.md  inflation_and_valuation.md  interpreting_trade_patterns.md  metrics_glossary.md  new_products_methodology.md  product_space_and_relatedness.md  scope_and_limitations.md  services_trade.md  strategic_approaches.md  trade_methodology.md
src/example_queries/: bilateral_exports.sql  cagr_coffee_global.sql  cog_kenya.sql  distance_india.sql  growth_opportunities_country.sql  largest_exporter_fruits_vegetables.sql  market_share_germany_automotive.sql  new_products_country.sql  pci_top_imports_canada.sql  queries.json  rca_brazil_coffee.sql  rca_count_brazil.sql  ssa_imports_sourced_from_africa.sql  total_exports_japan_sitc.sql  trade_balance_germany_usa.sql  unilateral_exports.sql  unilateral_exports_4_digit.sql
src/prompts/: __init__.py  _blocks.py  prompt_agent.py  prompt_docs.py  prompt_graphql.py  prompt_graphql_subagent.py  prompt_sql.py
src/schema/: db_table_descriptions.json  db_table_structure.json
src/setup/: create_search_indexes.py  get_db_schema.py  get_embeddings.py  update_country_policy_data.py
src/tests/: conftest.py  fake_model.py  test_agent_node.py  test_agent_trajectory.py  test_api.py  test_async_sql_multiple_schemas.py  test_atlas_links.py  test_build_docs_index.py  test_build_docs_index_integration.py  test_cache.py  test_cache_catalogs.py  test_cache_integration.py  test_compare_cohorts.py  test_config.py  test_config_integration.py  test_conversations.py  test_conversations_integration.py  test_db_pool_health.py  test_docs_e2e.py  test_docs_integration.py  test_docs_pipeline.py  test_docs_retrieval.py  test_error_handling.py  test_error_handling_integration.py  test_eval_guardrails.py  test_eval_integration.py  test_eval_report.py  test_feedback.py  test_feedback_integration.py  test_generate_query.py  test_graph.py  test_graph_wiring.py  test_graphql_client.py  test_graphql_pipeline.py  test_graphql_subagent.py  test_judge_year_gap.py  test_link_judge.py  test_persistence.py  test_persistence_integration.py  test_pipeline_db_integration.py  (+22 more)
src/text_to_sql/: select_schema_and_tables.py
(+830 files in other folders)
