[project]
name = "ask-atlas"
version = "0.1.0"
description = "Ask-Atlas is a chatbot that allows users to ask questions about the Atlas database and receive answers."
requires-python = ">=3.12"
authors = [{name="Shreyas Gadgin Matha", email="heavier.flume.9g@icloud.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "SQLAlchemy>=2",
    "anthropic>=0.35.0",
    "openai>=1.52.2",
    "httpx>=0.27.2",
    "python-dotenv>=1",
    "langchain-openai>=0.2.3",
    "langchain-core>=0.3.15",
    "langchain-community>=0.3.3",
    "langchain-postgres>=0.0.12",
    "langgraph>=0.2.44",
    "streamlit>=1.39.0",
    "psycopg2-binary",
    "chainlit",
]

[project.optional-dependencies]
dev = [
    "psycopg>=3.2.3",
    "psycopg2==2.9.10",
    "beautifulsoup4>=4.12.3",
    "faiss-cpu>=1.9.0",
    "nest-asyncio>=1.6.0",
    "pgvector>=0.2.5",
    "pydantic>=2",
    "boto3",
    "llama-index>=0.11.16",
    "ruff>=0.1.3",
    "black>=23.10.1"
]

[project.urls]
Homepage = "https://ask-atlas.streamlit.app/"
Repository = "https://github.com/shreyasgm/ask-atlas.git"
"Bug Tracker" = "https://github.com/shreyasgm/ask-atlas/issues"

[dependency-groups]
dev = [
    "llm-comparator>=0.1",
    "pytest>=8.3.4",
]
