[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-atlas"
version = "0.1.0"
description = "Ask-Atlas is a chatbot that allows users to ask questions about the Atlas database and receive answers."
requires-python = ">=3.12"
authors = [{name="Shreyas Gadgin Matha", email="heavier.flume.9g@icloud.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "SQLAlchemy>=2",
    "anthropic>=0.35.0",
    "openai>=1.52.2",
    "httpx>=0.27.2",
    "python-dotenv>=1",
    "pydantic-settings>=2.0.0",
    "langchain-openai>=0.2.3",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.15",
    "langchain-community>=0.3.3",
    "langchain-postgres>=0.0.12",
    "langgraph>=1.0.0",
    "streamlit>=1.39.0",
    "psycopg2-binary",
    "chainlit",
    "tenacity>=8.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.urls]
Homepage = "https://ask-atlas.streamlit.app/"
Repository = "https://github.com/shreyasgm/ask-atlas.git"
"Bug Tracker" = "https://github.com/shreyasgm/ask-atlas/issues"

[dependency-groups]
dev = [
    "asyncpg>=0.30.0",
    "backoff>=2.2.1",
    "psycopg2==2.9.10",
    "beautifulsoup4>=4.12.3",
    "faiss-cpu>=1.9.0",
    "nest-asyncio>=1.6.0",
    "pgvector>=0.2.5",
    "pydantic>=2",
    "boto3",
    "llama-index>=0.11.16",
    "ruff>=0.1.3",
    "black>=23.10.1",
    "llm-comparator>=0.1",
    "pytest>=8.3.4",
    "browser-use>=0.1.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require integration with external services (like LLM)",
    "db: marks tests that require a live database connection",
]

[tool.uv]
# Include dev dependencies by default when running uv sync
default-groups = ["dev"]
