[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-atlas"
version = "0.1.0"
description = "Ask-Atlas is a chatbot that allows users to ask questions about the Atlas database and receive answers."
requires-python = ">=3.12,<3.14"
authors = [{name="Shreyas Gadgin Matha", email="heavier.flume.9g@icloud.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "SQLAlchemy>=2",
    "anthropic>=0.35.0",
    "openai>=1.52.2",
    "httpx>=0.27.2",
    "python-dotenv>=1",
    "pydantic-settings>=2.0.0",
    "langchain-openai>=0.2.3",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.15",
    "langchain-community>=0.3.3",
    "langchain-postgres>=0.0.12",
    "langgraph>=1.0.0",
    "streamlit>=1.39.0",
    "psycopg2-binary",
    "chainlit",
    "tenacity>=8.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sse-starlette>=1.6.0",
    "sqlglot>=26.0.0",
    "cachetools>=5.3.0",
    "cachetools-async>=0.0.5",
    "python-json-logger>=2.0.0",
    "litellm>=1.55.0",
    "langchain-litellm>=0.6.1",
]

[project.urls]
Homepage = "https://ask-atlas.streamlit.app/"
Repository = "https://github.com/shreyasgm/ask-atlas.git"
"Bug Tracker" = "https://github.com/shreyasgm/ask-atlas/issues"

[dependency-groups]
dev = [
    "asyncpg>=0.30.0",
    "backoff>=2.2.1",
    "psycopg2-binary>=2.9.10",
    "beautifulsoup4>=4.12.3",
    "faiss-cpu>=1.9.0",
    "nest-asyncio>=1.6.0",
    "pgvector>=0.2.5",
    "pydantic>=2",
    "boto3",
    "llama-index>=0.11.16",
    "ruff>=0.1.3",
    "llm-comparator>=0.1",
    "pytest>=8.3.4",
    "browser-use>=0.1.24",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # Pydantic serialization warnings from LangChain structured output — known
    # upstream issue, not actionable on our end.
    "ignore:Pydantic serializer warnings:UserWarning",
]
markers = [
    "integration: marks tests that require integration with external services (like LLM)",
    "db: marks tests that require a live database connection",
    "eval: marks eval-based integration tests (real LLM + production DB + LLM-as-judge)",
]
addopts = "-m 'not db and not integration and not eval'"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "E",    # Critical errors
    "F",    # Pyflakes
    "B",    # Bug detection (flake8-bugbear)
    "I",    # Import sorting
    "N",    # PEP 8 naming
    "T20",  # Print statements
    "UP",   # Python upgrade suggestions
]
lint.ignore = [
    "E501",  # Line too long — ruff format handles code; long strings/comments are fine
    "N806",  # Uppercase variable in function — we use UPPER_CASE for local constants
    "B905",  # zip() without strict= — too pedantic for our codebase
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.uv]
# Include dev dependencies by default when running uv sync
default-groups = ["dev"]
